--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Shop</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="shopping_bag_img">shopping bag</string>
+    <string name="catalog">Catalog</string>
+    <string name="the_most_popular_n_items_today">The most popular\n items today</string>
+    <string name="product_image">product image</string>
+    <string name="rating">Rating</string>
+    <string name="add_to_cart">Add to cart</string>
+    <string name="vote">vote</string>
+    <string name="product_price_format">"$ %s"</string>
+    <string name="there_is_no_internet_connection">There is no internet connection</string>
+    <string name="please_check_your_internet_connection">Please, check your internet connection</string>
 </resources>
